--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="header" hx-get="header.html" hx-trigger="load" hx-swap="outerHTML">
-    	<!-- This content will be replaced with the header.html content -->
-  	</div>
+	<section class="header" hx-get="header.html" hx-trigger="load" hx-swap="outerHTML"></section>
+	<section class="main" hx-get="main.html" hx-trigger="load" hx-swap="outerHTML"></section>
+	<section class="footer" hx-get="footer.html" hx-trigger="load" hx-swap="outerHTML"></section>
 </body>
 </html>
