--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <h2>This is a list of links</h2>
 <ul>
-	<li><a href="https//:google.com">Google</a></li>
+	<li><a href="https://www.google.com">Google</a></li>
 	<li><a href="">You Tube</a></li>
 	<li><a href="">TikTok</a></li>
 </ul>
